# Janus-A-sml

./: README.md  acinclude.m4  configure.ac
examples/: factor.janus  fib.janus  fib1.janus  root.janus  runlength_encoding.janus  schroedinger.janus  schroedinger.output_by_pendulum_10_repetition  schroedinger.output_by_pendulum_1_repetition  schroedinger.output_by_pendulum_2_repetition  sint.janus  sint_opt.janus  sint_opt.janus.in  sint_opt.janus.replace  sint_without_swap.janus  smf.janus  sort.janus  swap_equals.janus  test_array.janus  test_array2.janus  test_do_error.janus  test_eval_binop.janus  test_eval_con.janus  test_eval_var.janus  test_exec_if.janus  test_exec_loop.janus  test_fib_bwd.janus  test_fib_fwd.janus  test_if_error.janus  test_long_file.janus  test_lvalue.janus  test_sch.janus  test_sch1.janus  test_sch10.janus  test_sch100.janus  test_sch1000.janus  test_sch10000.janus  test_sch100000.janus  test_sch1M.janus  test_sch3.janus  test_sch_init.janus  (+24 more)
src/: Makefile.am  README  absyn.sml  driver.sml  env.sml  errormsg.sml  eval.sml  invert.sml  janus.grm  janus.lex  parse.sml  prabsyn.sml  pretty.sml  prompt.lex  prompt.sml  sources.cm  symbol.sig  symbol.sml  table.sig  table.sml  trans.sml
tests/: statistic-061046-listversion.txt  statistic-0611021200.txt  statistic-0611022345.txt  statistic-0611221523.txt  statistic-0611252032.txt  statistic-0611252032.xls  test_fib.script  test_sch100000_call.script  test_sch100000_call_3times.sh  test_sch100000_uncall.script  test_sch100000_uncall_3times.sh  test_sch10000_call.script  test_sch10000_call_3times.sh  test_sch10000_uncall.script  test_sch10000_uncall_3times.sh  test_sch1000_call.script  test_sch1000_call_3times.sh  test_sch1000_uncall.script  test_sch1000_uncall_3times.sh  test_sch100_call.script  test_sch100_call_3times.sh  test_sch100_uncall.script  test_sch100_uncall_3times.sh  test_sch10_call.script  test_sch10_call_3times.sh  test_sch10_uncall.script  test_sch10_uncall_3times.sh  test_sch1M_call.script  test_sch1M_call_3times.sh  test_sch1M_uncall.script  test_sch1M_uncall_3times.sh  test_sch1_call.script  test_sch1_call_3times.sh  test_sch1_uncall.script  test_sch1_uncall_3times.sh  test_sch3_call.script  test_sch3_call_3times.sh  test_sch3_uncall.script  test_sch3_uncall_3times.sh  test_sint_fib_fwd.script  (+15 more)
